created homepage and added new steps

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "quasar-project",
   "version": "0.0.1",
   "description": "A Quasar Project",
-  "productName": "Ensino com exemplos",
+  "productName": "Aprendizagem Baseada em Exemplos",
   "author": "Tiago Piperno Bonetti <tiagopiperno@gmail.com>",
   "private": true,
   "scripts": {
