adicionada opção de login com google e algumas pequenas mudanças

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "baseUrl": ".",
+    "baseUrl": "/example-basedLearning/",
     "paths": {
       "src/*": [
         "src/*"
