--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@quasar/extras": "^1.0.0",
     "core-js": "^3.6.5",
     "firebase": "^10.8.1",
+    "html2pdf.js": "^0.10.2",
+    "jspdf": "^2.5.1",
     "quasar": "^2.6.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0"
